secondfile/objects/Contact_Us_Query__c.object
<CustomObject>
    <description>Data submitted by a user on the Contact Us pages</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>The Company field from the Contact Us page</description>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <description>The Company Website field from the Contact Us page</description>
        <label>Company Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The Email field from the Contact Us page</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>The First Name field from the Contact Us page</description>
        <label>First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>The Last Name field from the Contact Us page</description>
        <label>Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The Message field from the Contact Us page</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>The Phone Number field from the Contact Us page</description>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>The Service field from the Contact Us page</description>
        <label>Service</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>The Subject field from the Contact Us page</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Contact Us page is authenticated, the associated User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Us_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Us Query</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Subject__c</columns>
        <columns>Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Contact Us Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Us Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>